array.island.Island.scala.error
Erreur de compilation :
Island:6: error: value lenght is not a member of Array[Int]
  for(i<- 0 to num.lenght){
                   ^