array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var i:Int=0
  var nbNiv:Int=0
  
  for(i<- 0 to num.lenght){
    if(num(i) > num(i-1)){
      nbNiv=nbNiv+1
    }else{
      nbNiv=nbNiv
    }
    
  }
  return nbNiv
  
}